[build-system]
requires = [
    "setuptools >= 48",
    "wheel >= 0.29.0",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
]

[tool.pytest.ini_options]
addopts = "-vvv --cov=fluvii --cov-report=term-missing --cov-branch --no-cov-on-fail"
